# generated_field_challenge

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  remake_container.sh  start.sh
config/: settings.py  urls.py
templates/: base.html
templates/web/: book_list.html  index.html
web/: admin.py  models.py  urls.py  views.py
web/management/commands/: create_dummy_books.py
web/migrations/: 0001_initial.py
